Risk - Yura Mamyrin (yura@yura.net)

CURRENT VERSION:

	Risk Game:	1.1.1.5
	 * Save:	8
	 * Network:	11

	Android		38
	Flash GUI:	2
	Swing GUI:	2
	Simple GUI:	1.1.1.1
	Increment1GUI:	1.1.1.1
	CommandLine:	1.0.4.1

1.1.1.5

	annihilate button added to FlashGUI attack screen
	Czech and Slovak languages added by Viliam Tomcanyi
	del islands tool added to the MapEditor
	can load a savegame file by double clicking on it or "Domination.jar c:\test.save"

	Android 38 option for color blind people added

1.1.1.4

	main map (luca.map) is now higher resolution (800x500)
	world map (world.map) is now higher resolution (800x500)
	MapEditor can load TEG/JTEG xml maps
	Card Ownership view shows you the cards you own when you dont own the country in Yellow
	online game setup ui fixes
	FlashGUI will remember the number of dice you are attacking/defending with in a given battle
	fixed: FlashGUI move and attack dialog countries that are too big need to be shown smaller

	Android 37 nullpointer in 2 exit events fixed (hack)
		   nullpointer in quit game and open stats activity at the same time fixed (hack)
		   show errors in saving file as well as in downloading it to the user (IOException: No space left on device)
		   on Android can select the number of dice to attack and defend
		   achartengine update
	Android 36 grasshopper update
		   game opening and hiding at same time/del and load auto.save in different threads fix
		   AI error in map Artic Map (divide by zero if there is no way out of a continent) fixed
	Android 35 StackOverflowError in onSaveInstanceState fix
	Android 34 auto.save file fails to fully create on some systems, then the load fails to load it leaving the user with a blank screen
	Android 33 find Closest Country if we are not touching a actual Country
		   if the system kills off the game because of too little mem, the game will then be loaded on next startup
		   do not overlap text in MapStore and Lobby game list